kubernetes/apps/network/external-service/truenas/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: truenas-backend
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: external-service-httproute-truenas
  useClientProtocol: true
  timeout:
    http:
      requestTimeout: 0s
      connectionIdleTimeout: 3600s
