kubernetes/apps/network/external-service/truenas/httproute.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-truenas
  labels:
    kubernetes.io/service-name: internal-truenas
addressType: IPv4
endpoints:
  - addresses:
      - ${TRUENAS_IP}
ports:
  - port: 443
    name: https
    protocol: TCP
  - port: 80
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: internal-truenas
spec:
  ports:
    - port: 443
      targetPort: 443
      name: https
    - port: 80
      targetPort: 80
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-service-httproute-truenas
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "truenas.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: internal-truenas
          port: 80
