kubernetes/apps/network/external-service/truenas/ingress.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-truenas
  labels:
    kubernetes.io/service-name: internal-truenas
addressType: IPv4
endpoints:
  - addresses:
      - ${TRUENAS_IP}
ports:
  - port: 443
    name: https
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: internal-truenas
spec:
  ports:
    - port: 443
      targetPort: 443
      name: https
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-truenas
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: internal
  rules:
    - host: truenas.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-truenas
                port:
                  number: 443
